# slack_vault

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pyproject.toml
docs/: architecture-diagrams.md  design.md  implementation-plan.md  slack-integration-plan.md  slack-qa-plan.md  vault-connection-plan.md
makefiles/: dev.mk  run.mk
src/slack_vault/: __init__.py  ai.py  archive.py  cli.py  config.py  connections.py  dev_cleanup.py  enhancement.py  evidence_store.py  extraction.py  git_vault.py  ingest.py  log_setup.py  ops_state.py  qa.py  qa_service.py  retrieval.py  slack_app.py  slack_events.py  slack_files.py  slack_ingest.py  slack_qa.py  slack_setup.py  source_registry.py  synthesis.py  vault_bootstrap.py
tests/: test_ai.py  test_archive.py  test_cli.py  test_config.py  test_connections.py  test_dev_cleanup.py  test_enhancement.py  test_evidence_store.py  test_extraction.py  test_git_vault.py  test_ingest.py  test_log_setup.py  test_ops_state.py  test_qa.py  test_qa_service.py  test_retrieval.py  test_slack_app.py  test_slack_events.py  test_slack_files.py  test_slack_ingest.py  test_slack_qa.py  test_slack_setup.py  test_source_registry.py  test_synthesis.py  test_vault_bootstrap.py
