[project]
name = "slack-vault"
version = "0.1.0"
description = "Slack ingestion and Q&A tooling for a Git-backed Obsidian knowledge vault."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.109.1",
    "claude-agent-sdk>=0.2.105",
    "pypdf>=6.13.2",
    "python-dotenv>=1.2.2",
    "slack-bolt>=1.28.0",
]

[project.scripts]
slack-vault = "slack_vault.cli:main"

[dependency-groups]
dev = [
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
]

[build-system]
requires = ["uv_build>=0.11.12,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = [
    "--cov=slack_vault",
    "--cov-report=term-missing",
    "--cov-fail-under=90",
]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["slack_vault"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
